[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Faces.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 7
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 7
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 7
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 7
atlas = ExtResource( 2 )
region = Rect2( 192, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 7
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 7
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 96, 96 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 43.0
margin_bottom = 20.0
grow_horizontal = 2
text = "Stats"

[node name="StatMenu" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 50.0
margin_right = -300.0
margin_bottom = -50.0

[node name="BackButton" type="Button" parent="StatMenu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -52.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 30.0
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="StatMenu"]
margin_left = 10.0
margin_top = 10.0
margin_right = 96.0
margin_bottom = 114.0

[node name="Mastermind" type="Label" parent="StatMenu/VBoxContainer"]
margin_right = 96.0
margin_bottom = 14.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="StatMenu/VBoxContainer"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 114.0
texture = SubResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="StatMenu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -57.0
margin_right = 96.0
margin_bottom = 57.0

[node name="Muncher" type="Label" parent="StatMenu/VBoxContainer2"]
margin_right = 96.0
margin_bottom = 14.0
grow_horizontal = 2

[node name="TextureRect2" type="TextureRect" parent="StatMenu/VBoxContainer2"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 114.0
texture = SubResource( 2 )

[node name="VBoxContainer3" type="VBoxContainer" parent="StatMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_top = 10.0
margin_right = 48.0
margin_bottom = 114.0

[node name="Devioid" type="Label" parent="StatMenu/VBoxContainer3"]
margin_right = 96.0
margin_bottom = 14.0
grow_horizontal = 2

[node name="TextureRect3" type="TextureRect" parent="StatMenu/VBoxContainer3"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 114.0
texture = SubResource( 3 )

[node name="VBoxContainer4" type="VBoxContainer" parent="StatMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -57.0
margin_right = 48.0
margin_bottom = 57.0

[node name="Hopper" type="Label" parent="StatMenu/VBoxContainer4"]
margin_right = 96.0
margin_bottom = 14.0
grow_horizontal = 2

[node name="TextureRect4" type="TextureRect" parent="StatMenu/VBoxContainer4"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 114.0
texture = SubResource( 4 )

[node name="VBoxContainer5" type="VBoxContainer" parent="StatMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -124.0
margin_right = 96.0
margin_bottom = -10.0

[node name="Observer" type="Label" parent="StatMenu/VBoxContainer5"]
margin_right = 96.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect5" type="TextureRect" parent="StatMenu/VBoxContainer5"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 114.0
texture = SubResource( 5 )

[node name="VBoxContainer6" type="VBoxContainer" parent="StatMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -124.0
margin_right = 48.0
margin_bottom = -10.0

[node name="Greeblin" type="Label" parent="StatMenu/VBoxContainer6"]
margin_right = 96.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect6" type="TextureRect" parent="StatMenu/VBoxContainer6"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 114.0
texture = SubResource( 6 )

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="StatMenu/BackButton" to="." method="_on_BackButton_pressed"]
